--- a/Kernel/configs/ruoqing.config.json
+++ b/Kernel/configs/ruoqing.config.json
@@ -59,7 +59,7 @@
             "use": true,
             "release": true
         },
-        "enableKernelSU": true,
-        "enableLXC": true
+        "enableKernelSU": false,
+        "enableLXC": false
     }
 ]
