--- a/Kernel/configs/wayne.config.json
+++ b/Kernel/configs/wayne.config.json
@@ -59,7 +59,7 @@
       "use": true,
       "release": true
     },
-    "enableKernelSU": true,
+    "enableKernelSU": false,
     "enableLXC": false
   }
 ]
