--- a/Kernel/configs/ruoqing.config.json
+++ b/Kernel/configs/ruoqing.config.json
@@ -2,32 +2,16 @@
     {
         "kernelSource": {
             "name": "k30u",
-            "repo": "https://github.com/2512500960/xiaomi_kernel_cezanne_r_oss.git",
-            "branch": "cezanne-r-oss",
-            "device": "cezanne",
-            "defconfig": "cezanne_user_defconfig"
+            "repo": "https://github.com/ruoqing501/xiaomi_kernel_odin.git",
+            "branch": "master",
+            "device": "odin",
+            "defconfig": "odin_defconfig"
         },
         "toolchains": [
             {
-                "repo": "https://github.com/LineageOS/android_prebuilts_clang_kernel_linux-x86_clang-r416183b",
-                "branch": "lineage-20.0",
+                "repo": https://github.com/ruoqing501/clang-r383902b1.git",
+                "branch": "main",
                 "name": "clang",
-                "binaryEnv": [
-                    "bin"
-                ]
-            },
-            {
-                "repo": "https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-android-4.9",
-                "branch": "lineage-19.1",
-                "name": "aarch64",
-                "binaryEnv": [
-                    "bin"
-                ]
-            },
-            {
-                "repo": "https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_arm_arm-linux-androideabi-4.9",
-                "branch": "lineage-19.1",
-                "name": "arm",
                 "binaryEnv": [
                     "bin"
                 ]
@@ -38,21 +22,8 @@
             "ARCH": "arm64",
             "CC": "clang",
             "externalCommands": {
-                "CLANG_TRIPLE": "aarch64-linux-gnu-",
-                "CROSS_COMPILE": "aarch64-linux-android-",
-                "CROSS_COMPILE_ARM32": "arm-linux-androideabi-",
-                "LD": "ld.lld",
-                "AR": "llvm-ar",
-                "NM": "llvm-nm",
-                "OBJCOPY": "llvm-objcopy",
-                "OBJDUMP": "llvm-objdump",
-                "READELF": "llvm-readelf",
-                "OBJSIZE": "llvm-size",
-                "STRIP": "llvm-strip",
-                "LDGOLD": "aarch64-linux-gnu-ld.gold",
-                "LLVM_AR": "llvm-ar",
-                "LLVM_DIS": "llvm-dis",
-                "CONFIG_THINLTO": ""
+                "CLANG_TRIPLE": "aarch64-linux-gnu-"
+                "LD": "ld.lld"
             }
         },
         "AnyKernel3": {
